style.css
html {
  scroll-behavior: smooth;
}

body {
  background-color: #eeefee;
  color: #222;
  font-family: "Open Sans", sans-serif;
  font-size: 16px;
  letter-spacing: 2px;
  margin: 0;
}

.title {
  font-family: "Dosis";
  line-height: 1.8;
  text-transform: uppercase;
}

.landing {
  align-items: center;
  background-attachment: fixed;
  background-image: url("assets/landing.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  flex-direction: column;
  height: calc(100vh - 76px);
  justify-content: center;
}

#main-title {
  color: #fff;
  font-size: 2em;
  letter-spacing: 0.5em;
  opacity: 0.9;
  text-align: center;
}

.btn {
  background-color: #ddd;
  border-radius: 2px;
  color: #222;
  padding: 0.5em;
  text-decoration: none;
}

.intro {
  display: flex;
  justify-content: space-between;
  margin: auto;
  padding: 6em 3em;
  width: 60vw;
}

.intro p {
  margin: 1em 0;
}

.box {
  width: 30%;
}

.quote {
  font-size: 1.25em;
  margin: 0;
}

.quote-author {
  font-size: 0.75em;
}

.section-intro {
  align-items: center;;
  background-color: #222;
  box-sizing: border-box;
  color: #fff;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 3em 8em;
  width: 100%;
}


.section-img {
  transform: translateY(-25%);
  text-align: center;
}

.section-img > img {
  border: solid 1px rgba(10, 10, 10, 0.6);
  margin-left: 1em;
  max-height: 20em;
  max-width: 30em;
}

.stacked {
  transform: translate(-25%, -25%);
}

.grayed {
  filter: grayscale(100%);
}

.content {
  padding: 5% 20% 10%;
  text-align: justify;
}

.content .quote {
  padding: 0 10% 3em;
  text-align: center;
}

.section-body {
  margin-bottom: 2em;
}

@media (max-width: 768px) {
  .landing {
    height: calc(100vh - 56px);
  }
  #main-title {
    padding: 1em;
  }
  .box {
    width: 100%;
  }
  .intro {
    flex-direction: column;
    width: 70vw;
  }
  .intro,
  .content,
  .section-intro {
    align-items: unset;
    flex-direction: column;
    padding: 4em 1em;
  }
}

@media (max-width: 1200px) {
  .section-intro {
    flex-wrap: unset;
  }

  .section-img {
    transform: unset;
    margin: 20px;
  }
  
  .section-img img {
    max-width: 90%;
  }
}

